Table header align fixes #40 Also changed address tracking from index2

--- a/css/style.css
+++ b/css/style.css
@@ -143,3 +143,9 @@
     max-width: 200px;
     width: 200px;
 }
+.userBody thead th:first-child {
+    width: 10%;
+}
+.userBody thead th:nth-child(2) {
+    width: 22%;
+}
